# var_ws_4

./: .gitignore  ost.yaml  requirements.txt
src/apriltag_detector/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/apriltag_detector/apriltag_detector/: apriltag_detector.py  apriltag_from_image.py  apriltag_pnp_from_image.py  apriltag_search_node.py  apriltag_visualizer.py  utils.py
src/apriltag_detector/msg/: ApriltagDetectionArray.msg
src/driver/: package.xml  setup.py
src/driver/driver/: driver_publisher.py  following_utils.py
src/goal_finder/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/goal_finder/goal_finder/: grad_angle.py  kalman.py  move.py  mover_node.py  ugv_obstacle.py  ugv_obstacle_detector.py
src/goal_finder/src/: move.py  move_old.py
src/image_subscriber/: package.xml  setup.py
src/image_subscriber/image_subscriber/: image_subscriber.py
src/line_follower/: package.xml  setup.py
src/line_follower/line_follower/: follow.py  hough_tools.py  lines_processor.py
src/map_generation/: clean_2dmap.py  clean_cloud.py  cloud_to_map.py  environment.yaml  generate_map.py  pathfinding.py  remove_floor.py
src/mapping/: package.xml  setup.py
src/mapping/mapping/offline_scripts/: reconstruction.py  to_ply.py
src/src/src/driver/: drive_publisher.py
src/triangulator/: package.xml  setup.cfg  setup.py
src/triangulator/triangulator/: showroom.ipynb  triangulator.py  triangulator_visualizer.py
